fixing redis connection
